--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "openai": "^4.53.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
